--- a/Groupe4/style.css
+++ b/Groupe4/style.css
@@ -1,3 +1,8 @@
 body{
     background-color: rgb(137, 243, 243);
 }
+nav{
+    background-color: aliceblue;
+    display: flex;
+    list-style: none;
+}
